<resources>
    <string name="app_name">FitHaus</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="DadesPersonals">Dades personals</string>
    <string name="Nom">Nom</string>
    <string name="Usuari">Usuari</string>
    <string name="Contrasenya">Contrasenya</string>
    <string name="Sexe">Sexe</string>
    <string name="DataNaixement">Data naixement</string>
    <string name="Logo">Logo</string>
    <string name="SegüentPantalla">Següent pantalla</string>
    <string name="DadesEsportives">Dades esportives</string>
    <string name="NumActivitats">Nº activitats fetes</string>
    <string name="Assoliments">Assoliments</string>
    <string name="Punts">Punts</string>
    <string name="Nivell">Nivell</string>
    <string name="Objectiu">Objectiu</string>
    <string name="CategoriesInterès">Categories d\'interès</string>
    <string name="Anterior_Pantalla">Anterior pantalla</string>
    <string name="TancarSessio">Tancar sessió</string>
    <string name="DadesFísiques">Dades físiques</string>
    <string name="Pes">Pes</string>
    <string name="Alçada">Alçada</string>
    <string name="IMC">IMC</string>
    <string name="IGC">IGC</string>
    <string name="Històric">Històric</string>
    <string name="ModificarPerfil">Modificar perfil</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="Fragment1">Fragment 1</string>
    <string name="PantallaInciarSessió">Iniciar Sessió</string>
    <string name="PantallaModificarPerfil">Modificar perfil</string>
    <string name="Històric_bd">Històric IMC i IGC</string>
    <string name="Mail">Correu electrònic</string>
    <string name="Mail_bd">Correu electrònic</string>
    <string name="PreguntaTancarSessió">Estàs segur que vols tancar sessió?</string>
    <string name="IniciarSessio">Iniciar sessió</string>
    <string name="TancarSessió">Tancar sessió</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Títol">Crea el teu perfil</string>
    <string name="Text_Botó">Crear perfil</string>
    <string name="Cognom1">Primer cognom</string>
    <string name="Cognom2">Segon Cognom</string>
    <string name="Email">Correu Electrònic</string>
    <string name="Password">Contrasenya</string>
    <string name="Sexe_home">Home</string>
    <string name="Sexe_Dona">Dona</string>
    <string name="Sexe_Altre">Altre</string>
    <string name="Username">Nom Usuari</string>
    <string name="Data_Naixement">Data Naixement</string>
    <string name="Checkbox_Contrasenya">Mostrar</string>
    <string name="BotonTitulo">CrearPerfil</string>
    <string name="button_programes">Programes</string>
    <string name="button_rutines">Rutines</string>
    <string name="button_colleccio">Col·lecció</string>
    <string name="edit_email">Email</string>
    <string name="enter_password">Password</string>
    <string name="registrar_button">Registra\'t</string>
    <string name="login_button">Iniciar sessió</string>
    <string name="RegisterQuestion">Et vols registrar?</string>
    <string name="button_google">Continuar amb Google</string>
    <string name="button_facebook">Continuar amb Facebook</string>
    <string name="facebook_app_id">344349210333001</string>
    <string name="fb_login_protocol_scheme">fb344349210333001</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="Imatge">Imatge</string>
    <string name="Duracio">Duració</string>
    <string name="Exercicis">Exercicis</string>
    <string name="Filtre">Filtre</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Filter">Filter</string>
    <string name="button">Button</string>
    <string name="Edat">Edat</string>
    <string name="Nen">Nen</string>
    <string name="Jove">Jove</string>
    <string name="Adult">Adult</string>
    <string name="Gran">Gran</string>
    <string name="Dificultat">Dificultat</string>
    <string name="Fàcil">Fàcil</string>
    <string name="Mitja">Mitjà</string>
    <string name="Difícil">Difícil</string>
    <string name="Categories">Categories</string>
    <string name="Força">Força</string>
    <string name="Cardio">Cardio</string>
    <string name="Ioga">Ioga</string>
    <string name="Estiraments">Estiraments</string>
    <string name="Rehabilitació">Rehabilitació</string>
    <string name="Pilates">Pilates</string>
    <string name="Músculs">Músculs treball</string>
    <string name="Nom_exercici">Nom exercici</string>
    <string name="Cancel">Cancelar</string>
    <string name="Okay">Filtrar</string>
    <string name="BuscaExercici">Escriu aquí el nom de l\'exercici</string>
    <string name="Bíceps">Biceps</string>
    <string name="Tríceps">Triceps</string>
    <string name="Forearm">Forearm</string>
    <string name="Core">Core</string>
    <string name="AfegirARutina">Afegir a rutina</string>
    <string name="NomClasse">Nom classe</string>
    <string name="BuscaClasse">Escriu aquí el nom de la classe</string>
    <string name="TrenInferior">Tren inferior</string>
    <string name="TrenSuperior">Tren superior</string>
    <string name="Cos">Cos sencer</string>
    <string name="ÀreaTreball">Àrees de treball</string>
    <string name="AfegirACalendari">Afegeix a calendari</string>
</resources>