<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/pop_up_window_classe">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitolFiltre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Filtre"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tvNomClasse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/NomClasse"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etNomClasse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/BuscaClasse" />

        <TextView
            android:id="@+id/tvEdat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Edat"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/EdatLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/tbNen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Nen"
                android:textOff="@string/Nen"
                android:textOn="@string/Nen" />

            <ToggleButton
                android:id="@+id/tbJove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Jove"
                android:textOff="@string/Jove"
                android:textOn="@string/Jove" />

            <ToggleButton
                android:id="@+id/tbAdult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Adult"
                android:textOff="@string/Adult"
                android:textOn="@string/Adult" />

            <ToggleButton
                android:id="@+id/tbGran"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Gran"
                android:textOff="@string/Gran"
                android:textOn="@string/Gran" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvDificultat2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Dificultat"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/DificultatLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/tbFacil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Fàcil"
                android:textOff="@string/Fàcil"
                android:textOn="@string/Fàcil" />

            <ToggleButton
                android:id="@+id/tbMitja"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Mitja"
                android:textOff="@string/Mitja"
                android:textOn="@string/Mitja" />

            <ToggleButton
                android:id="@+id/tbDificil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Difícil"
                android:textOff="@string/Difícil"
                android:textOn="@string/Difícil" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Categories"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/CategoriesLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/Categories1Layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <ToggleButton
                    android:id="@+id/tbForça"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Força"
                    android:textOff="@string/Força"
                    android:textOn="@string/Força" />

                <ToggleButton
                    android:id="@+id/tbCardio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Cardio"
                    android:textOff="@string/Cardio"
                    android:textOn="@string/Cardio" />

                <ToggleButton
                    android:id="@+id/tbIoga"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Ioga"
                    android:textOff="@string/Ioga"
                    android:textOn="@string/Ioga" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/Categories2Layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ToggleButton
                    android:id="@+id/tbEstiraments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Estiraments"
                    android:textOff="@string/Estiraments"
                    android:textOn="@string/Estiraments" />

                <ToggleButton
                    android:id="@+id/tbRehab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Rehabilitació"
                    android:textOff="@string/Rehabilitació"
                    android:textOn="@string/Rehabilitació" />

                <ToggleButton
                    android:id="@+id/tbPilates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Pilates"
                    android:textOff="@string/Pilates"
                    android:textOn="@string/Pilates" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tvAreaTreball"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ÀreaTreball"
            android:textSize="18sp" />


        <LinearLayout
            android:id="@+id/layoutÀreaTreball"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/tbTrenInferior"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/TrenInferior"
                android:textOff="@string/TrenInferior"
                android:textOn="@string/TrenInferior" />

            <ToggleButton
                android:id="@+id/tbTrenSuperior"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/TrenSuperior"
                android:textOff="@string/TrenSuperior"
                android:textOn="@string/TrenSuperior" />

            <ToggleButton
                android:id="@+id/tbCos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Cos"
                android:textOff="@string/Cos"
                android:textOn="@string/Cos" />

            <ToggleButton
                android:id="@+id/tbCore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Core"
                android:textOff="@string/Core"
                android:textOn="@string/Core" />

        </LinearLayout>


        <Button
            android:id="@+id/btOkay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/Okay"
            app:layout_constraintBottom_toBottomOf="@id/layoutÀreaTreball" />

        <Button
            android:id="@+id/btCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/Cancel"
            app:layout_constraintBottom_toBottomOf="@id/btOkay"
            app:layout_constraintEnd_toEndOf="parent" />
    </LinearLayout>
</ScrollView>