<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dataNaixement_bd"
        android:layout_width="139dp"
        android:layout_height="26dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="29dp"
        android:text="@string/DataNaixement"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/dataNaixement"
        app:layout_constraintTop_toBottomOf="@+id/mail_bd" />

    <TextView
        android:id="@+id/mail_bd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:text="@string/Mail_bd"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/mail"
        app:layout_constraintTop_toBottomOf="@+id/SexeSelection" />

    <TextView
        android:id="@+id/nom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="46dp"
        android:text="@string/Nom"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dadesPersonals" />

    <TextView
        android:id="@+id/usuari"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/Usuari"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/nom"
        app:layout_constraintTop_toBottomOf="@+id/nom" />

    <TextView
        android:id="@+id/sexe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/Sexe"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/usuari"
        app:layout_constraintTop_toBottomOf="@+id/usuari" />

    <TextView
        android:id="@+id/dataNaixement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/DataNaixement"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/mail"
        app:layout_constraintTop_toBottomOf="@+id/mail" />

    <TextView
        android:id="@+id/mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/Mail"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/sexe"
        app:layout_constraintTop_toBottomOf="@+id/sexe" />

    <TextView
        android:id="@+id/dadesPersonals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:text="@string/DadesPersonals"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="178dp"
        android:layout_height="38dp"
        android:layout_marginStart="87dp"
        android:layout_marginTop="39dp"
        android:ems="10"
        android:hint="@string/Nom"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/nom"
        app:layout_constraintTop_toBottomOf="@+id/dadesPersonals" />

    <RadioGroup
        android:id="@+id/SexeSelection"
        android:layout_width="104dp"
        android:layout_height="104dp"
        android:layout_marginStart="87dp"
        android:layout_marginTop="13dp"
        app:layout_constraintStart_toEndOf="@+id/sexe"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2">

        <RadioButton
            android:id="@+id/Sexe_Dona"
            android:layout_width="92dp"
            android:layout_height="34dp"
            android:text="@string/Sexe_Dona"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/Sexe_Home"
            android:layout_width="92dp"
            android:layout_height="34dp"
            android:text="@string/Sexe_home"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/Sexe_Altre"
            android:layout_width="92dp"
            android:layout_height="34dp"
            android:text="@string/Sexe_Altre"
            android:textSize="18sp" />

    </RadioGroup>

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="178dp"
        android:layout_height="38dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="@string/Username"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/usuari"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
</androidx.constraintlayout.widget.ConstraintLayout>