<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_marginTop="8dp"
    android:orientation="horizontal">


    <!--TODO: canviar per imatge-->

    <TextView
        android:id="@+id/ivRutina"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:text="@string/Imatge" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvNom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Nom"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvNivell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:text="@string/Nivell"
            android:textSize="15sp" />


        <Button
            android:id="@+id/btAfegirACalendari"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/AfegirACalendari" />

    </LinearLayout>


</LinearLayout>